--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
             <div class="container mx-auto px-6">
                 <h2 class="text-3xl md:text-4xl font-bold text-center text-white mb-12">About Me</h2>
                 <div class="max-w-3xl mx-auto text-center text-gray-300 text-lg leading-relaxed">
-                    <p class="mb-4">I am a recent graduate with a Bachelor of Secondary Education, major in Filipino, and I am excited to begin my journey as a teacher. Throughout my studies, I have developed a strong foundation in teaching strategies, communication, and classroom management that I am eager to apply in a real school setting.
+                    <p class="mb-4">I am a recent graduate with a Bachelor of Science in Agroforestry, and I am excited to begin my journey as an educator in the field of agriculture and environmental studies. Throughout my academic years, I have gained strong knowledge in sustainable land use, forest management, and agricultural systems that I am eager to share with future learners.
 
-<br><br>During my practice teaching, I discovered how fulfilling it is to guide students in their learning journey. I enjoyed seeing their growth and confidence improve as they understood lessons and expressed themselves more freely. Those experiences strengthened my passion for teaching and inspired me to continue improving as an educator.
+<br><br>During my practice teaching, I discovered how fulfilling it is to guide students in understanding the importance of agroforestry and environmental stewardship. I enjoyed seeing their curiosity and confidence grow as they learned how trees, crops, and people can coexist in harmony. Those experiences deepened my passion for teaching and inspired me to continue developing as an Agroforestry educator.
 
-<br><br>I am committed to creating a classroom that is welcoming, supportive, and engaging for all learners. My goal is to make learning Filipino both meaningful and enjoyable, helping students appreciate the language and culture while developing essential skills for the future.            </div>
+<br><br>I am committed to creating a learning environment that is welcoming, hands-on, and engaging, where students can connect theory with real-world applications. My goal is to make learning Agroforestry both meaningful and inspiring—helping students become responsible stewards of the land and contributors to a sustainable future.</div>
         </section>
 
         <section id="portfolio" class="py-20 bg-gray-900">
