--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <h2 class="text-3xl md:text-4xl font-bold text-center text-white mb-12">My Resume</h2>
                 <div class="max-w-4xl mx-auto flex flex-col items-center gap-8">
                     <div class="w-full border-4 border-gray-700 rounded-lg overflow-hidden shadow-lg">
-                         <img src="Cream and Brown Minimalist Professional Resume (1).jpg" alt="Resume Preview" class="w-full">
+                         <img src="Resume.jpg" alt="Resume Preview" class="w-full">
                     </div>
                 </div>
                 <h2 class="text-3xl md:text-4xl font-bold text-center text-white mb-3">My Application Letter</h2>
