--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <h2 class="text-3xl md:text-4xl font-bold text-center text-white mb-3">My Application Letter</h2>
                 <div class="max-w-4xl mx-auto flex flex-col items-center gap-8">
                     <div class="w-full border-4 border-gray-700 rounded-lg overflow-hidden shadow-lg">
-                         <img src="Greyscale Photo Modern Student Internship Cover Letter.jpg" alt="Resume Preview" class="w-full">
+                         <img src="Application.jpg" alt="Resume Preview" class="w-full">
                     </div>
                 </div>
             </div>
